# AgriMarketNepal-2.0

./: .gitignore  README.md  pyproject.toml
agrimarket_nepal/: package-lock.json  package.json  tailwind.config.js
agrimarket_nepal/agrimarket_nepal/: admin.py  asgi.py  response.py  settings.py  urls.py  wsgi.py
agrimarket_nepal/consumables/: models.py  urls.py  views.py
agrimarket_nepal/consumables/forms/: create.py
agrimarket_nepal/consumables/migrations/: 0001_initial.py  0002_alter_consumable_image.py  0003_alter_consumable_table.py  0004_alter_consumable_image.py  0005_alter_consumable_image.py
agrimarket_nepal/provinces/: models.py  serializers.py  urls.py  views.py
agrimarket_nepal/provinces/migrations/: 0001_initial.py
agrimarket_nepal/static/css/: styles.css
agrimarket_nepal/templates/auth/: login.html  register.html
agrimarket_nepal/templates/consumables/: create.html  index.html
agrimarket_nepal/templates/layouts/: base.html
agrimarket_nepal/users/: admin.py  models.py  serializers.py  urls.py  views.py
agrimarket_nepal/users/forms/: __init__.py  auth.py
agrimarket_nepal/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_user_email.py  0003_user_is_admin_user_is_staff_alter_user_role.py  0004_rename_is_admin_user_is_superuser.py  0005_alter_user_managers_user_date_joined_user_first_name_and_more.py  0006_alter_user_email.py
agrimarket_nepal/users/templates/: name.html
api/Agrimarket Nepal/: Get Provinces.bru  List all Users.bru  Login.bru  Post Province.bru  Post Users.bru  Register.bru  bruno.json
(+1 files in other folders)
